changes logo navbar

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TEESSA – Fundación</title>
-    <link rel="icon" href="/img/teessa_logo.png">
+    <link rel="icon" href="/img/teessa_logo_white.png" media="(prefers-color-scheme: dark)">
+    <link rel="icon" href="/img/teessa_logo.png" media="(prefers-color-scheme: light)">
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="sidebar-open">
@@ -13,7 +14,7 @@
 
 <aside id="sidebar" class="sidebar" aria-label="Navegación principal">
     <div class="sidebar-brand">
-        <img src="img/TEESSA_Logotipo_Principal_Color_Claim.png" alt="Logo Fundación TEESSA" class="sidebar-logo" loading="lazy">
+        <img src="img/teessa_logo.png" alt="Logo Fundación TEESSA" class="sidebar-logo" loading="lazy">
     </div>
     <nav>
         <ul id="navMenu">
