--- a/index.html
+++ b/index.html
@@ -218,10 +218,10 @@
                         colaborando como voluntario o donante, difundiendo nuestra misión y acercándonos tu
                         propuesta de capacitación para juntos hacerla realidad.
                     </p>
-                    <div class="cta-highlight" style="background: linear-gradient(90deg, #E8C730 20%, #E8426F 80%); color: #00212C; border-radius: 16px; padding: 1.2rem 1.5rem; margin-bottom: 1.2rem; box-shadow: 0 4px 16px rgba(232,199,48,0.08); text-align: center; font-size: 1.18rem; font-weight: 700;">
+                    <div class="cta-highlight" style="background: linear-gradient(90deg, #E8C730 20%, #E8426F 80%); color: #00212C; border-radius: 16px; padding: 1.5rem 1.7rem 1.7rem 1.7rem; margin: 2.2rem 0 1.6rem 0; box-shadow: 0 4px 16px rgba(232,199,48,0.08); text-align: center; font-size: 1.13rem; font-weight: 700;">
                         ¡Tu participación transforma vidas!<br>
                         Sé parte de TEESSA y ayudá a construir una sociedad más justa.<br>
-                        <a href="#footer" style="display:inline-block; margin-top:0.8rem; background:#E8426F; color:#fff; padding:0.7rem 1.3rem; border-radius:8px; font-weight:600; text-decoration:none; transition:background 0.2s;">Quiero unirme</a>
+                        <a href="#footer" style="display:inline-block; margin-top:1.3rem; background:#E8426F; color:#fff; padding:0.62rem 1.25rem; border-radius:18px; font-weight:600; text-decoration:none; font-size:1.08rem; letter-spacing:0.5px; box-shadow:0 2px 8px rgba(232,66,111,0.10); transition:background 0.2s, box-shadow 0.2s;">Quiero unirme</a>
                     </div>
                 </div>
             </div>
