change icons pilares

--- a/index.html
+++ b/index.html
@@ -271,12 +271,7 @@
 
             <div class="card pillar-card">
                 <div class="pillar-icon">
-                    <svg viewBox="0 0 24 24" role="img" aria-labelledby="trabajoTitle">
-                        <title id="trabajoTitle">Trabajo</title>
-                        <path d="M3 7h18v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V7z"></path>
-                        <path d="M8 7V6a4 4 0 0 1 8 0v1"></path>
-                        <path d="M3 11h18" opacity="0.6"></path>
-                    </svg>
+                    <img src="img/iconspilares/trabajo.svg" alt="Icono Trabajo" loading="lazy" />
                 </div>
                 <h3>Trabajo</h3>
                 <p>
@@ -286,11 +281,7 @@
 
             <div class="card pillar-card">
                 <div class="pillar-icon">
-                    <svg viewBox="0 0 24 24" role="img" aria-labelledby="educacionTitle">
-                        <title id="educacionTitle">Educación</title>
-                        <path d="M4 6v12a1 1 0 0 0 1 1h14V5a1 1 0 0 0-1-1H5a1 1 0 0 0-1 1z"></path>
-                        <path d="M18 5l-6 4-6-4" opacity="0.8"></path>
-                    </svg>
+                    <img src="img/iconspilares/educacion.svg" alt="Icono Educación" loading="lazy" />
                 </div>
                 <h3>Educación</h3>
                 <p>
@@ -300,13 +291,7 @@
 
             <div class="card pillar-card">
                 <div class="pillar-icon">
-                    <svg viewBox="0 0 24 24" role="img" aria-labelledby="economiaTitle">
-                        <title id="economiaTitle">Economía</title>
-                        <path d="M3 21V3h18v18H3z" opacity="0.04"></path>
-                        <path d="M7 15V9" stroke-width="1.6"></path>
-                        <path d="M12 15V7" stroke-width="1.6"></path>
-                        <path d="M17 15v-3" stroke-width="1.6"></path>
-                    </svg>
+                    <img src="img/iconspilares/economia.svg" alt="Icono Economía" loading="lazy" />
                 </div>
                 <h3>Economía</h3>
                 <p>
@@ -316,10 +301,7 @@
 
             <div class="card pillar-card">
                 <div class="pillar-icon">
-                    <svg viewBox="0 0 24 24" role="img" aria-labelledby="saludTitle">
-                        <title id="saludTitle">Salud</title>
-                        <path d="M20.8 8.6a5.5 5.5 0 0 0-8.1-0.1L12 9.1l-0.6-0.6a5.5 5.5 0 1 0-7.8 7.8L12 21l8.8-8.6a5.5 5.5 0 0 0 0-7.8z"></path>
-                    </svg>
+                    <img src="img/iconspilares/salud.svg" alt="Icono Salud" loading="lazy" />
                 </div>
                 <h3>Salud</h3>
                 <p>
@@ -329,11 +311,7 @@
 
             <div class="card pillar-card">
                 <div class="pillar-icon">
-                    <svg viewBox="0 0 24 24" role="img" aria-labelledby="seguridadTitle">
-                        <title id="seguridadTitle">Seguridad</title>
-                        <path d="M12 2l7 3v5c0 5-3.5 9-7 10-3.5-1-7-5-7-10V5l7-3z"></path>
-                        <path d="M12 11v5" stroke-width="1.6" opacity="0.9"></path>
-                    </svg>
+                    <img src="img/iconspilares/seguridad.svg" alt="Icono Seguridad" loading="lazy" />
                 </div>
                 <h3>Seguridad</h3>
                 <p>
@@ -343,11 +321,7 @@
 
             <div class="card pillar-card">
                 <div class="pillar-icon">
-                    <svg viewBox="0 0 24 24" role="img" aria-labelledby="ambienteTitle">
-                        <title id="ambienteTitle">Ambiente</title>
-                        <path d="M21 11c-1-6-9-9-9-9S3 5 3 11c0 6 6 9 9 11 0 0 7-3 9-11z"></path>
-                        <path d="M14 11s-3 1-5 4" stroke-width="1.6" opacity="0.9"></path>
-                    </svg>
+                    <img src="img/iconspilares/ambiente.svg" alt="Icono Ambiente" loading="lazy" />
                 </div>
                 <h3>Ambiente</h3>
                 <p>
