--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
 <body class="sidebar-open">
 
+
+<!-- Botón sticky Sumate -->
+<a href="#footer" class="sumate-btn" title="Sumate a la Fundación">Sumate</a>
+
 <button id="sidebarToggle" class="sidebar-toggle" aria-label="Mostrar u ocultar navegación" aria-expanded="true">☰</button>
 
 <aside id="sidebar" class="sidebar" aria-label="Navegación principal">
@@ -66,7 +70,7 @@
             <p class="about-title" style="margin-bottom: 1.2rem; text-align: justify; width: 100%;">
                 Fundación TEESSA es una entidad creada en agosto del 2024 por un grupo de personas con la convicción de contribuir al mejoramiento de la calidad de vida en sociedad, tanto en el ámbito local, provincial, nacional e internacional, investigando, capacitando y concientizando sobre temas relacionados al trabajo, a la educación, a la economía, a la salud, a la seguridad, al ambiente y cualquier otro tema que sea menester en función de las necesidades sociales actuales y potenciales.
             </p>
-            <img src="img/quienessomos2.jpeg" alt="Actividad de Fundación TEESSA" loading="lazy" style="width: 100%; max-width: 900px; height: auto; border-radius: 12px; object-fit: cover;">
+            <img src="img/quienessomos2.jpeg" alt="Actividad de Fundación TEESSA" loading="lazy" style="width: 92%; max-width: 820px; height: auto; border-radius: 12px; object-fit: cover; margin-right: 5%;">
         </div>
     </div>
 </section>
